--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
         "role": "Developer"
     }],
     "require": {
-        "illuminate/contracts": "^6.0 || ^7.0",
-        "illuminate/events": "^6.0 || ^7.0",
-        "illuminate/filesystem": "^6.0 || ^7.0",
-        "illuminate/view": "^6.0 || ^7.0",
-        "php": "^7.2"
+        "illuminate/contracts": "^7.0 || ^8.0",
+        "illuminate/events": "^7.0 || ^8.0",
+        "illuminate/filesystem": "^7.0 || ^8.0",
+        "illuminate/view": "^7.0 || ^8.0",
+        "php": "^7.2 || ^8.0"
     },
     "require-dev": {
-        "duncan3dc/object-intruder": "^0.3.0",
-        "maglnet/composer-require-checker": "^2.0",
+        "duncan3dc/object-intruder": "^1.0.0",
+        "maglnet/composer-require-checker": "^3.0",
         "mockery/mockery": "^1.2",
         "phpstan/phpstan": "^0.12.30",
         "phpstan/phpstan-mockery": "^0.12.5",
